revert: restore to last known working state (6e2b3a28)